update auth service